# FY109-FLP

./: .gitignore  README.md
fake_magnetometer/: CMakeLists.txt  package.xml
fake_magnetometer/scripts/: fake_magnoetic_publisher.py
itri_gazebo_plugin/src/: gazebo_ros_gpu_laser.hpp
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_bringup/: CMakeLists.txt  package.xml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_bringup/launch/: itri_bumper2pc.launch  itri_minimal_kobuki.launch
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_bringup/launch/includes/: itri_mobile_base.launch  itri_robot_kobuki.launch
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_description/: CMakeLists.txt  package.xml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_description/launch/: .itri_robot.launch.swp
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_gazebo/: CMakeLists.txt  package.xml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_gazebo/launch/: bringup_one_robot.launch  bringup_one_robot_laser_scan_matcher.launch  bringup_one_robot_navigation.launch  bringup_one_robot_navigation_laser_scan_matcher.launch  bringup_only_navigation.launch  multi_turtlebot_walls.launch  one_robot.launch  robots.launch  robots_laser.launch
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_gazebo/urdf/: gpu_hokuyo_gazebo.urdf.xacro  hokuyo_gazebo.urdf.xacro  itri_lab_wall.urdf.xacro
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_gazebo/world/: itri_lab.world  itri_lab_with_pedestrian.world
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/itri_robot_gazebo/worlds/: itri_lab.world  itri_lab_with_pedestrian.world
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/kobuki_navigation/: CMakeLists.txt  package.xml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/kobuki_navigation/launch/: kb_hector_slam.launch  kb_laser_scan_matcher_navigation.launch  kb_navigation.launch  minimal.launch
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/kobuki_navigation/map/: map.pgm  map.yaml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/kobuki_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  itri_turtlebot_ekf.yaml  line_follower_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/kobuki_navigation/rviz_cfg/: hector_slam.rviz  navigation.rviz  one_turtle_navigation.rviz
kobuki_gazebo_melodic/src/itri_multi_robot_kobuki/map/: map.pgm  map.yaml
kobuki_gazebo_melodic/src/kobuki/kobuki_keyop/launch/: keyop.launch
kobuki_gazebo_melodic/src/kobuki_desktop/kobuki_gazebo_plugins/src/: gazebo_ros_kobuki_updates.cpp
kobuki_gazebo_melodic/src/line_follower/: CMakeLists.txt  blp_plugin.xml  package.xml
kobuki_gazebo_melodic/src/line_follower/include/line_follower/: line_follower.h
kobuki_gazebo_melodic/src/line_follower/scripts/: SpiralPath.py  magic_conch_shell.py  test.py
kobuki_gazebo_melodic/src/line_follower/src/: line_follower.cpp
kobuki_gazebo_melodic/src/teleop_twist_joy/config/: ps4.config.yaml  sb.config.yaml
kobuki_gazebo_melodic/src/teleop_twist_joy/launch/: teleop.launch
mag_recoder/: CMakeLists.txt  package.xml
mag_recoder/scripts/: GP_modeling_magnetic_field.ipynb  SciKit-Gaussian-Process(backup 20190918).ipynb  SciKit-Gaussian-Process.ipynb  Untitled.ipynb  mag_recoder_node.py  mag_remapping.py
mag_recoder/scripts/.ipynb_checkpoints/: SciKit-Gaussian-Process(backup 20190918)-checkpoint.ipynb  SciKit-Gaussian-Process-checkpoint.ipynb  Untitled-checkpoint.ipynb
mag_recoder/srv/: SaveImg.srv
magnetic_map_data/: itri_lab_R2S03.yaml  mag_data_x.csv  mag_data_y.csv  mag_data_z.csv
magnetic_map_data/20191021/: mag_data_x.csv  mag_data_y.csv  mag_data_z.csv  map_r1.yaml
magnetic_map_data/20191022/: mag_data_x.csv  mag_data_y.csv  mag_data_z.csv  map_r1.pgm
magnetic_map_data/20191025/: mag_data_x.csv  mag_data_y.csv  mag_data_z.csv
magnetic_map_data/20191029_dist005/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist005/ROS_msg/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist007/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist007/ROS_msg/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist008/: .~lock.mag_pred_x.csv#  .~lock.mag_pred_y.csv#  .~lock.mag_pred_z.csv#  mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist008/ROS_msg/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist01/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/20191029_dist01/ROS_msg/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/ROS_msg/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/predic/: mag_pred_x.csv  mag_pred_y.csv  mag_pred_z.csv
magnetic_map_data/predic/20190823/: mag_pred_x.csv  mag_pred_z.csv
monte_carlo_localization/: CMakeLists.txt  package.xml
monte_carlo_localization/include/monte_carlo_localization/: ROS_interface.h  ROS_sensor_interface.h  csv_reader.h  laser_likelihood_map.h  laser_likelihood_map_builder.h  laser_likelihood_map_publisher.h  laser_map.h  laser_map_publisher.h  laser_map_reader.h  laser_scan.h  laser_scan_wall_publisher.h  mag_map_publisher.h  magnetic_field.h  magnetic_map.h  odometry.h  particle_filter.h  particles.h  particles_publisher.h  pose.h  robot.h  robot_pose_publisher.h  twist.h
monte_carlo_localization/src/: mag_map_publisher.cpp  main.cpp  particle_filter.cpp  particle_filter_node.cpp  particles.cpp  test_CSV_main.cpp  test_laser_likelihood_map_main.cpp  test_laser_map_main.cpp  test_laser_wall_pub_main.cpp  test_mag_map_pub_main.cpp  test_move_particles.cpp  test_particles_pub_main.cpp
monte_carlo_localization/test/: test_laser_likelihood_map_pub_main.cpp  test_laser_map_main.cpp  test_magPub_main.cpp
(+10 files in other folders)
