<package format="2">
  <name>line_follower</name>
  <version>0.1.11</version>
  <description>line_follower</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <author>Eitan Marder-Eppstein</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/line_follower</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>nav_core</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>

</package>


